--- a/css/main.css
+++ b/css/main.css
@@ -6,13 +6,15 @@
 
 body {
 	font-family: 'Poppins', sans-serif;
-    color: #161414;
+	color: #161414;
 }
 
+/* ========= Скрытие элементов ========= */
 .none {
 	display: none !important;
 }
 
+/* ========= Шапка сайта ========= */
 .header {
 	padding: 31px 0 100px;
 	height: 800px;
@@ -25,25 +27,22 @@ body {
 	border-radius: 0 0 54px 54px;
 }
 
-.header a {
-	color: #fff;
-}
-
+/* ========= Контейнер страницы ========= */
 .container {
 	margin: 0 auto;
 	max-width: 1440px;
 	padding: 0 32px;
 }
 
-.container--header {
+/* ========= Контейнер шапки ========= */
+.header__container {
 	height: 100%;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
 }
 
-/* Nav */
-
+/* ========= Основная навигация ========= */
 .nav {
 	display: flex;
 	justify-content: space-between;
@@ -51,57 +50,62 @@ body {
 	column-gap: 30px;
 }
 
-.logo {
+/* ========= Логотип в шапке ========= */
+.nav__logo {
 	flex-shrink: 0;
+	color: #fff;
 }
 
-/* Nav list */
-
-.nav-list {
+/* ========= Список ссылок навигации ========= */
+.nav__list {
 	display: flex;
 	column-gap: 54px;
 	font-size: 14px;
 	font-weight: 300;
-    text-transform: capitalize;
+	text-transform: capitalize;
 }
 
-.nav-list__item {
-}
-
-.nav-list__link {
+/* ========= Ссылки навигации ========= */
+.nav__link {
+	color: #fff;
 	opacity: 0.7;
 }
 
-.nav-list__link--active {
+/* ========= Активная ссылка навигации ========= */
+.nav__link--active {
 	opacity: 1;
 }
 
-/* User */
-
+/* ========= Блок пользователя ========= */
 .user {
 	display: flex;
 	column-gap: 8px;
 	align-items: center;
 }
 
+/* ========= Текстовый блок пользователя ========= */
 .user__content {
 	display: flex;
 	flex-direction: column;
 	align-items: flex-end;
 }
 
+/* ========= Приветствие пользователя ========= */
 .user__greeting {
 	opacity: 0.5;
 }
 
+/* ========= Имя пользователя ========= */
 .user__name {
 	font-weight: 600;
 }
 
+/* ========= Аватар пользователя ========= */
 .user__avatar {
 	position: relative;
 }
 
+/* ========= Индикатор статуса пользователя ========= */
 .user__avatar::after {
 	position: absolute;
 	right: 0;
@@ -115,12 +119,12 @@ body {
 	border-radius: 50%;
 }
 
+/* ========= Изображение пользователя ========= */
 .user__img {
 	border-radius: 50%;
 }
 
-/* Header Content */
-
+/* ========= Контент шапки ========= */
 .header__content {
 	display: flex;
 	flex-direction: column;
@@ -129,18 +133,18 @@ body {
 	text-align: center;
 }
 
+/* ========= Заголовок шапки ========= */
 .header__title {
 	font-weight: 600;
 	font-size: 48px;
 	line-height: 1.3;
 }
 
-/* Form */
-
+/* ========= Форма поиска ========= */
 .form {
-    display: flex;
-    align-items: center;
-    align-self: center;
+	display: flex;
+	align-items: center;
+	align-self: center;
 
 	width: 1140px;
 	height: 88px;
@@ -151,389 +155,428 @@ body {
 	border-radius: 12px;
 }
 
+/* ========= Обертка поля формы ========= */
 .form__input-wrapper {
-    display: flex;
-    flex-direction: column;
-    padding: 15px 20px 16px 56px;
+	display: flex;
+	flex-direction: column;
+	padding: 15px 20px 16px 56px;
 
-    background-repeat: no-repeat;
-    background-position: 16px 24px;
+	background-repeat: no-repeat;
+	background-position: 16px 24px;
 }
 
+/* ========= Поле ввода локации ========= */
 .form__input--location {
-    width: 300px;
-    background-image: url('./../img/icons/map.svg');
+	width: 300px;
+	background-image: url('./../img/icons/map.svg');
 }
 
+/* ========= Поле выбора активности ========= */
 .form__input--activity {
-    width: 255px;
-    background-image: url('./../img/icons/activity.svg');
+	width: 255px;
+	background-image: url('./../img/icons/activity.svg');
 }
 
+/* ========= Поле выбора гостей ========= */
 .form__input--guests {
-    width: 255px;
-    background-image: url('./../img/icons/guests.svg');
-
+	width: 255px;
+	background-image: url('./../img/icons/guests.svg');
 }
 
+/* ========= Поле выбора даты ========= */
 .form__input--date {
-    width: 255px;
-    background-image: url('./../img/icons/calendar.svg');
+	width: 255px;
+	background-image: url('./../img/icons/calendar.svg');
 }
 
+/* ========= Подпись к полю ========= */
 .form__label {
-    font-size: 14px;
-    font-weight: 300;
-    color: #5B5B5B;
+	font-size: 14px;
+	font-weight: 300;
+	color: #5b5b5b;
 }
+/* ========= Поле формы ========= */
 .form__input {
-    color: #161414;
-    font-weight: 500;
-    font-size: 16px;
+	color: #161414;
+	font-weight: 500;
+	font-size: 16px;
 }
 
+/* ========= Плейсхолдер полей ========= */
 .form__input::placeholder {
-    color: #000;
+	color: #000;
 }
 
-/* Main */
-
-.title-1 {
-    font-weight: 600;
-    font-size: 32px;
-    line-height: 1, 5;
-    color: #161414;
+/* ========= Заголовки секций ========= */
+.section__title {
+	font-weight: 600;
+	font-size: 32px;
+	line-height: 1.5;
+	color: #161414;
 }
 
+/* ========= Основной контент ========= */
 .main {
-    padding: 120px 0;
-    display: grid;
-    gap: 120px;
+	padding: 120px 0;
+	display: grid;
+	gap: 120px;
 }
 
+/* ========= Шапка секции ========= */
 .section__header {
-    margin-bottom: 64px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+	margin-bottom: 64px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
 }
 
+/* ========= Сетка карточек ========= */
 .section__cards {
-    display: grid;
-    gap: 32px;
+	display: grid;
+	gap: 32px;
 }
 
+/* ========= Сетка на шесть элементов ========= */
 .section__cards--6-in-row {
 	grid-template-columns: repeat(6, 1fr);
 }
 
+/* ========= Сетка на четыре элемента ========= */
 .section__cards--4-in-row {
 	grid-template-columns: repeat(4, 1fr);
 }
 
+/* ========= Сетка на два элемента ========= */
 .section__cards--2-in-row {
 	grid-template-columns: repeat(2, 1fr);
 }
 
-/* Card */
-
+/* ========= Базовая карточка ========= */
 .card {
-    position: relative;
+	position: relative;
 }
 
+/* ========= Широкая карточка ========= */
 .card--wide {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 32px;
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	gap: 32px;
 }
 
+/* ========= Ссылка поверх всей карточки ========= */
 .card__link {
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
 }
 
+/* ========= Изображение карточки ========= */
 .card__img {
-    width: 100%;
-    border-radius: 12px;
-    margin-bottom: 8px;
-    object-fit: cover;
+	width: 100%;
+	border-radius: 12px;
+	margin-bottom: 8px;
+	object-fit: cover;
 }
 
+/* ========= Изображение на всю высоту ========= */
 .card__img--h100 {
-    height: 100%;
+	height: 100%;
 }
 
+/* ========= Изображение для отелей ========= */
 .card__img--hotel {
-    margin-bottom: 10px;
+	margin-bottom: 10px;
 }
 
+/* ========= Изображение без отступа ========= */
 .card__img--no-margin {
-    margin: 0;
+	margin: 0;
 }
 
+/* ========= Заголовок карточки ========= */
 .card__title {
-    color: #161414;
-    font-size: 16px;
-    font-weight: 500;
+	color: #161414;
+	font-size: 16px;
+	font-weight: 500;
 }
 
+/* ========= Заголовок карточки отеля ========= */
 .card__title--hotel {
-    margin-bottom: 12px;
+	margin-bottom: 12px;
 }
 
+/* ========= Изображение активности ========= */
 .card__img--activities {
-    margin-bottom: 16px;
+	margin-bottom: 16px;
 }
 
+/* ========= Ссылка на локацию ========= */
 .card__location {
-    position: relative;
-    z-index: 1;
-    color: #979797;
-    font-size: 13px;
+	position: relative;
+	z-index: 1;
+	color: #979797;
+	font-size: 13px;
 }
 
+/* ========= Ховер для ссылки локации ========= */
 .card__location:hover {
-    color: #7B61FF;
+	color: #7b61ff;
 }
 
+/* ========= Ссылка локации с иконкой ========= */
 .card__location--icon {
-    padding-left: 20px;
-    background-repeat: no-repeat;
-    background-position: 0px 1px;
-    background-image: url('./../img/icons/map-pin-line.svg');
+	padding-left: 20px;
+	background-repeat: no-repeat;
+	background-position: 0px 1px;
+	background-image: url('./../img/icons/map-pin-line.svg');
 }
 
+/* ========= Подвал карточки ========= */
 .card__footer {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    column-gap: 24px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	column-gap: 24px;
 }
 
+/* ========= Блок рейтинга ========= */
 .card__rating {
-    display: flex;
-    align-items: center;
-    gap: 2px;
+	display: flex;
+	align-items: center;
+	gap: 2px;
 }
 
+/* ========= Описание карточки ========= */
 .card__desc {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    row-gap: 16px;
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	row-gap: 16px;
 }
 
-
+/* ========= Крупный заголовок карточки ========= */
 .card__title--big {
-    color: #161414;
-    font-weight: 600;
-    font-size: 20px;
+	color: #161414;
+	font-weight: 600;
+	font-size: 20px;
 }
 
+/* ========= Текст карточки ========= */
 .card__text {
-    color: #5B5B5B;
-    font-size: 16px;
-    line-height: 2;
+	color: #5b5b5b;
+	font-size: 16px;
+	line-height: 2;
 }
 
+/* ========= Подвал широкой карточки ========= */
 .card__footer--wide {
-    margin-top: auto;
+	margin-top: auto;
 }
 
+/* ========= Ссылка в подвале ========= */
 .card__footer-link {
-    position: relative;
-    z-index: 1;
-    font-size: 12px;
-    color: #878787;
+	position: relative;
+	z-index: 1;
+	font-size: 12px;
+	color: #878787;
 
-    padding-left: 20px;
-    background-repeat: no-repeat;
-    background-position: 0px 1px;
+	padding-left: 20px;
+	background-repeat: no-repeat;
+	background-position: 0px 1px;
 }
 
+/* ========= Ховер ссылок подвала карточки ========= */
 .card__footer-link:hover {
-    color: #7B61FF;
+	color: #7b61ff;
 }
 
+/* ========= Ссылка с датой ========= */
 .card__footer-link--date {
-    background-image: url('./../img/icons/calendar-gray.svg');
+	background-image: url('./../img/icons/calendar-gray.svg');
 }
 
+/* ========= Ссылка с автором ========= */
 .card__footer-link--author {
-    background-image: url('./../img/icons/user.svg');
+	background-image: url('./../img/icons/user.svg');
 }
 
+/* ========= Ссылка с количеством комментариев ========= */
 .card__footer-link--comments {
-    background-image: url('./../img/icons/comment.svg');
+	background-image: url('./../img/icons/comment.svg');
 }
 
-/* About Us */
-
+/* ========= Блок о компании ========= */
 .about-us {
-    margin: 0 auto;
-    max-width: 1144px;
-    display: grid;
-    gap: 32px;
-    grid-template-columns: repeat(2, 1fr);
+	margin: 0 auto;
+	max-width: 1144px;
+	display: grid;
+	gap: 32px;
+	grid-template-columns: repeat(2, 1fr);
 }
 
+/* ========= Описание блока ========= */
 .about-us__desc {
-    display: grid;
-    gap: 32px;
-    align-content: center;
+	display: grid;
+	gap: 32px;
+	align-content: center;
 }
 
+/* ========= Заголовок блока ========= */
 .about-us__title {
-    font-size: 32px;
-    font-weight: 600;
+	font-size: 32px;
+	font-weight: 600;
 }
 
+/* ========= Текст о компании ========= */
 .about-us__text {
-    font-size: 16px;
-    color: #5B5B5B;
-    line-height: 2;
+	font-size: 16px;
+	color: #5b5b5b;
+	line-height: 2;
 }
 
+/* ========= Кнопка внутри блока ========= */
 .about-us__btn {
-    justify-self: flex-start;
+	justify-self: flex-start;
 }
 
+/* ========= Изображение блока ========= */
 .about-us__img {
-    border-radius: 24px;
-    height: 100%;
-    object-fit: cover;
+	border-radius: 24px;
+	height: 100%;
+	object-fit: cover;
 }
 
-/* Footer */
-
+/* ========= Подвал сайта ========= */
 .footer {
-    padding: 120px 0;
-    background-color: #F9F9F9;
+	padding: 120px 0;
+	background-color: #f9f9f9;
 }
 
+/* ========= Сетка подвала ========= */
 .footer__row {
-    display: grid;
-    gap: 64px;
-    grid-template-columns: repeat(3, auto);
+	display: grid;
+	gap: 64px;
+	grid-template-columns: repeat(3, auto);
 }
 
+/* ========= Блок с логотипом и текстом ========= */
 .footer__copyright {
-    max-width: 354px;
-    display: grid;
-    gap: 16px;
+	max-width: 354px;
+	display: grid;
+	gap: 16px;
 }
 
+/* ========= Текст подвала ========= */
 .footer__text {
-    margin-bottom: 16px;
-    font-size: 13px;
-    color: #5B5B5B;
+	margin-bottom: 16px;
+	font-size: 13px;
+	color: #5b5b5b;
 }
 
+/* ========= Социальные сети ========= */
 .footer__socials {
-    display: flex;
-    gap: 32px;
-    align-items: center;
+	display: flex;
+	gap: 32px;
+	align-items: center;
 }
 
-/* Footer Nav */
-
+/* ========= Навигация подвала ========= */
 .footer__nav-wrapper {
-    display: flex;
-    gap: 64px;
+	display: flex;
+	gap: 64px;
 }
 
+/* ========= Колонка ссылок подвала ========= */
 .footer__nav {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
+	display: flex;
+	flex-direction: column;
+	gap: 20px;
 }
 
+/* ========= Заголовок списка подвала ========= */
 .footer__nav-title {
-    font-size: 18px;
-    font-weight: 500;
+	font-size: 18px;
+	font-weight: 500;
 }
 
+/* ========= Список ссылок подвала ========= */
 .footer__nav-list {
-    display: grid;
-    grid-template: 12px;
+	display: grid;
+	grid-template: 12px;
 }
 
-.footer__nav-item {
-
-}
-
+/* ========= Ссылки подвала ========= */
 .footer__nav-link {
-    color: #5B5B5B;
-    font-size: 13px;
+	color: #5b5b5b;
+	font-size: 13px;
 }
 
+/* ========= Ховер ссылок подвала ========= */
 .footer__nav-link:hover {
-    color: #7B61FF;
+	color: #7b61ff;
 }
 
-/* Subscribe */
-
+/* ========= Форма подписки ========= */
 .footer__subscribe {
-    max-width: 388px;
+	max-width: 388px;
 }
 
+/* ========= Заголовок подписки ========= */
 .footer__subscribe-title {
-    margin-bottom: 20px;
-    font-size: 18px;
-    font-weight: 500;
+	margin-bottom: 20px;
+	font-size: 18px;
+	font-weight: 500;
 }
 
-/* Sunscribe */
-
+/* ========= Контейнер формы подписки ========= */
 .subscribe {
-    display: flex;
-    gap: 16px;
+	display: flex;
+	gap: 16px;
 }
 
+/* ========= Обертка поля подписки ========= */
 .subscribe__input-wrapper {
-    position: relative;
-    flex-grow: 9;
+	position: relative;
+	flex-grow: 9;
 }
 
+/* ========= Поле для e-mail ========= */
 .subscribe__input {
-    padding: 32px 20px 16px 56px;
+	padding: 32px 20px 16px 56px;
 
-    width: 100%;
-    height: 72px;
-    background-color: #fff;
-    border-radius: 12px;
+	width: 100%;
+	height: 72px;
+	background-color: #fff;
+	border-radius: 12px;
 
-    background-image: url('./../img/icons/email.svg');
-    background-repeat: no-repeat;
-    background-position: 18px 27px;
+	background-image: url('./../img/icons/email.svg');
+	background-repeat: no-repeat;
+	background-position: 18px 27px;
 }
 
+/* ========= Подпись поля подписки ========= */
 .subscribe__label {
-    position: absolute;
-    top: 26px;
-    left: 56px;
+	position: absolute;
+	top: 26px;
+	left: 56px;
 
-    font-size: 14px;
-    font-weight: 300;
-    color: #5B5B5B;
+	font-size: 14px;
+	font-weight: 300;
+	color: #5b5b5b;
 
-    transition: all 0.2s ease-in;
-    pointer-events: none;
+	transition: all 0.2s ease-in;
+	pointer-events: none;
 }
 
+/* ========= Подпись при фокусе ========= */
 .subscribe__input:focus ~ .subscribe__label,
 .subscribe__input:valid ~ .subscribe__label {
-    top: 16px;
+	top: 16px;
 }
 
+/* ========= Сжатая подпись ========= */
 .subscribe__label--top {
-    top: 16px;
+	top: 16px;
 }
-/*
-.subscribe__input:invalid ~ .subscribe__label {
-    top: 16px;
-    color: #ff0000;
-} */
