--- a/css/reset.css
+++ b/css/reset.css
@@ -1,4 +1,4 @@
-/* Reset and base styles  */
+/* ========= Базовый сброс ========= */
 * {
 	padding: 0px;
 	margin: 0px;
@@ -11,92 +11,117 @@
 	box-sizing: border-box;
 }
 
+/* ========= Состояния фокуса ========= */
 :focus,
 :active {
-	/*outline: none;*/
 }
 
 a:focus,
 a:active {
-	/* outline: none;*/
 }
 
-/* Links */
-
-a, a:link, a:visited  {
-    /* color: inherit; */
-    text-decoration: none;
-    /* display: inline-block; */
+/* ========= Стили ссылок ========= */
+a,
+a:link,
+a:visited {
+	text-decoration: none;
 }
 
-a:hover  {
-    /* color: inherit; */
-    text-decoration: none;
+/* ========= Наведение на ссылки ========= */
+a:hover {
+	text-decoration: none;
 }
 
-/* Common */
-
-aside, nav, footer, header, section, main {
+/* ========= Блочные элементы ========= */
+aside,
+nav,
+footer,
+header,
+section,
+main {
 	display: block;
 }
 
-h1, h2, h3, h4, h5, h6, p {
-    font-size: inherit;
+/* ========= Заголовки и параграфы ========= */
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+	font-size: inherit;
 	font-weight: inherit;
 }
 
-ul, ul li {
+/* ========= Списки ========= */
+ul,
+ul li {
 	list-style: none;
 }
 
+/* ========= Изображения ========= */
 img {
 	vertical-align: top;
 }
 
-img, svg {
+img,
+svg {
 	max-width: 100%;
 	height: auto;
 }
 
+/* ========= Адрес ========= */
 address {
-  font-style: normal;
+	font-style: normal;
 }
 
-/* Form */
-
-input, textarea, button, select {
+/* ========= Элементы форм ========= */
+input,
+textarea,
+button,
+select {
 	font-family: inherit;
-    font-size: inherit;
-    color: inherit;
-    background-color: transparent;
+	font-size: inherit;
+	color: inherit;
+	background-color: transparent;
 }
 
+/* ========= Очистка в IE ========= */
 input::-ms-clear {
 	display: none;
 }
 
-button, input[type="submit"] {
-    display: inline-block;
-    box-shadow: none;
-    background-color: transparent;
-    background: none;
-    cursor: pointer;
+/* ========= Кнопки ========= */
+button,
+input[type='submit'] {
+	display: inline-block;
+	box-shadow: none;
+	background-color: transparent;
+	background: none;
+	cursor: pointer;
 }
 
-input:focus, input:active,
-button:focus, button:active {
-    outline: none;
+/* ========= Фокус элементов форм ========= */
+input:focus,
+input:active,
+button:focus,
+button:active {
+	outline: none;
 }
 
+/* ========= Внутренние отступы кнопок Firefox ========= */
 button::-moz-focus-inner {
 	padding: 0;
 	border: 0;
 }
 
+/* ========= Метки ========= */
 label {
 	cursor: pointer;
 }
 
+/* ========= Подпись fieldset ========= */
 legend {
 	display: block;
 }
